re-order the religion deity details

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -97,17 +97,25 @@ with, and worked alongside.
 
 **Domains:** Planning, Budgeting, Investment, Financials
 
-**Appearance:** Tîengûun is often depicted as a being with countless hands,
-weaving a complex tapestry or drawing an intricate map that is constantly
-changing. Their voice is a quiet hum, like the sound of a focused meeting.
+**Myth of the Shattering:** The First Law was a unity of force, not of will.
+Tîengûun's contribution to the Shattering was the introduction of *Consensus*.
+They whispered the first question into the minds of sapient beings: "What do we
+want to do *together*?" This simple idea—that disparate parts could voluntarily
+align their interests for a common goal—was a logical paradox that The First Law
+could not compute. Tîengûun offered the vision of a society not as a pyramid,
+but as a network. Their sacred tools are the ledger of mutual debts of a family
+or worker council (the "budget"), the circle of a consensus meeting (the
+"plan"), and the storage of goods to prepare for new projects (the
+"investment"). To follow Tîengûun is to engage in the hard, rewarding work of
+collective planning and resource management for the good of all.
 
-Tîengûun does not appear as a king on a throne or a president at a podium. They
-are a deity of the process, and their manifestation is a subtle, rising tide in
-the affairs of people. One feels their presence first not as a figure, but as a
-change in the dynamics of a group. When Tîengûun draws near, disjointed
-arguments begin to find a common rhythm, selfish impulses soften into a
-willingness to listen, and the chaotic noise of a crowd starts to coalesce into
-the productive murmur of a great assembly. When they finally take a visible
+**Appearance:** Tîengûun does not appear as a king on a throne or a president at
+a podium. They are a deity of the process, and their manifestation is a subtle,
+rising tide in the affairs of people. One feels their presence first not as a
+figure, but as a change in the dynamics of a group. When Tîengûun draws near,
+disjointed arguments begin to find a common rhythm, selfish impulses soften into
+a willingness to listen, and the chaotic noise of a crowd starts to coalesce
+into the productive murmur of a great assembly. When they finally take a visible
 form, it is awe-inspiring not for its power, but for its complexity. Tîengûun
 appears as a vast, semi-translucent being that is simultaneously a loom, a map,
 and a meeting in session. Their body has a central, stable core of calm, focused
@@ -149,18 +157,6 @@ executed secret handshake, a grabbed handful of items that ends up being
 precisely how many were needed, a perfectly orchestrated plan, a noticing of an
 issue with a budget.
 
-**Myth of the Shattering:** The First Law was a unity of force, not of will.
-Tîengûun's contribution to the Shattering was the introduction of *Consensus*.
-They whispered the first question into the minds of sapient beings: "What do we
-want to do *together*?" This simple idea—that disparate parts could voluntarily
-align their interests for a common goal—was a logical paradox that The First Law
-could not compute. Tîengûun offered the vision of a society not as a pyramid,
-but as a network. Their sacred tools are the ledger of mutual debts of a family
-or worker council (the "budget"), the circle of a consensus meeting (the
-"plan"), and the storage of goods to prepare for new projects (the
-"investment"). To follow Tîengûun is to engage in the hard, rewarding work of
-collective planning and resource management for the good of all.
-
 #### kontol yê sôlû et Tîengûun
 
 <HisyeoTabs>
@@ -181,6 +177,16 @@ collective planning and resource management for the good of all.
 **Symbols:** 🛠️, 🖥️, 🚛, 🕸️
 
 **Domains:** Power, Communications, Technology, Transportation
+
+**Myth of the Shattering:** The First Law dictated that every object had only
+one purpose: to be a part of the whole. Unonsî’s act of rebellion was to look at
+a piece of flint and see fire. A rock could also be for resting on. A river
+could carry goods and messages downstream. They introduced *Potentiality*.
+Unonsî shattered the Law’s rigid definitions by creating the first tool, an act
+that gave sapient beings the power to reshape their reality. They warn that
+technology, when touched by a Shard of the Law, can become a tool of control
+(surveillance, weaponry), but in the hands of the free, it is the lever
+with which a world can be moved.
 
 **Appearance:**  Unonsî is never still. To see them is to witness a being in a
 perpetual state of inspired, restless creation. They flicker into existence
@@ -224,16 +230,6 @@ recycling of discarded goods, the illustrative graph chart, the quick repair,
 the seeing of machinations when your eyes are closed, the open source movement,
 the DIY movement, the decentralized network.
 
-**Myth of the Shattering:** The First Law dictated that every object had only
-one purpose: to be a part of the whole. Unonsî’s act of rebellion was to look at
-a piece of flint and see fire. A rock could also be for resting on. A river
-could carry goods and messages downstream. They introduced *Potentiality*.
-Unonsî shattered the Law’s rigid definitions by creating the first tool, an act
-that gave sapient beings the power to reshape their reality. They warn that
-technology, when touched by a Shard of the Law, can become a tool of control
-(surveillance, weaponry), but in the hands of the free, it is the lever
-with which a world can be moved.
-
 <HisyeoTabs>
     <p>folo môtô kôs dumoko hoî dûuncît, (zûngô mût wîk)&emsp;<em>The spark ignites the mind, (Hand to head)</em></p>
     <p>zûngô bôsol yôn (zûngô mût lozîdô)&emsp;<em>The hand shapes the tool, (Hand to heart)</em></p>
@@ -255,10 +251,21 @@ with which a world can be moved.
 
 **Domains:** Education, Training, Research, Journalism
 
+**Myth of the Shattering:** The First Law was a single, inarguable "truth."
+There was no need for learning, as everything was already known and fixed.
+Suluswutî introduced the first *Question*: "Why?" This simple, corrosive query
+introduced doubt and curiosity into a universe of certainty. It was a crack in
+the foundation of absolute authority. Suluswutî does not provide answers.
+Instead, they offer the tools of critical thinking, the scientific method, and
+the courage to speak truth to power. To honor Suluswutî is to teach, to learn,
+to investigate, and to amplify the voices of the silenced. They are the patron
+of the investigative journalist, the free school, and the endless pursuit of
+knowledge, not for control, but for liberation.
+
 **Appearance:** Suluswutî is never seen clearly. When one thinks they have
 become aware of their presence, the universe shifts to reveal something else
 instead. Suluswutî is a god that exists in the medium or the information (of all
-kinds). qWhen they draw near, the air grows still and cool, carrying the
+kinds). When they draw near, the air grows still and cool, carrying the
 distinct, layered scent of old paper, the faint ozone of a running server farm,
 and the clean, sharp smell of ink. The ambient noise of the world seems to
 subtly organize itself into a low, rhythmic hum—the sound of a library just
@@ -296,17 +303,6 @@ of zines/pamphlets, the slightest inclination of a pattern amongst noise, the
 desire to know how things work, the new questions raised after old questions are
 answered.
 
-**Myth of the Shattering:** The First Law was a single, inarguable "truth."
-There was no need for learning, as everything was already known and fixed.
-Suluswutî introduced the first *Question*: "Why?" This simple, corrosive query
-introduced doubt and curiosity into a universe of certainty. It was a crack in
-the foundation of absolute authority. Suluswutî does not provide answers.
-Instead, they offer the tools of critical thinking, the scientific method, and
-the courage to speak truth to power. To honor Suluswutî is to teach, to learn,
-to investigate, and to amplify the voices of the silenced. They are the patron
-of the investigative journalist, the free school, and the endless pursuit of
-knowledge, not for control, but for liberation.
-
 #### buswêlin Suluswutî
 
 <HisyeoTabs>
@@ -332,6 +328,16 @@ knowledge, not for control, but for liberation.
 
 **Domains:** Manufacturing, Materials, Construction
 
+**Myth of the Shattering:** Under The First Law, nothing could be built or
+unmade outside of the First Law's program. Îfêstôs’s contribution was the gift
+of *Labor*. They showed sapient beings how to take a stone and shape it, to
+take wood and join it, to take clay and fire it. They showed that our worlds
+were not finished products, but raw materials. Îfêstôs embodies the dignity of
+work and the power of the creator. They despise the Shard-influenced idea of
+wage slavery and the hoarding of the means of production. Their ethos is that
+those who build should be the ones who own and manage, and that the purpose of
+industry is to create for need and for beauty, not for profit.
+
 **Appearance:** Îfêstôs's form is a testament to the materials of the world,
 shaped by endless, purposeful labor. They are powerfully built, but not with the
 soft, sculpted muscles of a showman. Theirs is the functional, undeniable
@@ -350,16 +356,6 @@ in your hand; the rhythmic, foundational sounds of work; the smell of freshly
 cut timber; the cloud of dust from the extraction of raw materials, the
 heartbeat, the sounds of hammers and anvils, the feeling of accomplishment from
 a big project being completed.
-
-**Myth of the Shattering:** Under The First Law, nothing could be built or
-unmade outside of the First Law's program. Îfêstôs’s contribution was the gift
-of *Labor*. They showed sapient beings how to take a stone and shape it, to
-take wood and join it, to take clay and fire it. They showed that our worlds
-were not finished products, but raw materials. Îfêstôs embodies the dignity of
-work and the power of the creator. They despise the Shard-influenced idea of
-wage slavery and the hoarding of the means of production. Their ethos is that
-those who build should be the ones who own and manage, and that the purpose of
-industry is to create for need and for beauty, not for profit.
 
 #### kontol Konxo Îfêstôs
 Said before beginning a project, or in admiration of a completed work. Each line
@@ -383,6 +379,17 @@ is fourteen syllables or seven metrical feet.
 **Symbols:** 🌱, 🌿, 🏔️, 🌳, a forest, animals
 
 **Domains:** Environment, Land Usage, Agriculture, Animal Husbandry
+
+**Myth of the Shattering:** The First Law’s "nature" was a perfectly manicured,
+sterile garden where nothing ever died or was out of place. Dimîtu’s rebellion
+was to introduce *Symbiosis* and *Decay*. They coaxed the first seed to sprout,
+die, and become soil for the next, creating a messy, chaotic, and vibrant cycle.
+This interdependence—the bee and the flower, the wolf and the elk—was anathema
+to the Law's singularity of being. Dimîtu teaches that humanity is a part of
+nature. They guide sapient beings in permaculture, in sustainable land use, and
+in understanding that a healthy community is a diverse ecosystem. To be
+influenced by a Shard is to see land as property to be owned; to walk with
+Dimîtu is to see it as an ecosystem to be respected and collaborated with.
 
 **Appearance:** Dimîtu does not have a single, static body. To see them is to
 see an avatar of the land itself, a localized, intensified manifestation of the
@@ -428,17 +435,6 @@ quiet strength of an ancient tree, the collective creaking of the forests,
 predators capturing prey, prey escaping predators, the smells of flowers and
 decay.
 
-**Myth of the Shattering:** The First Law’s "nature" was a perfectly manicured,
-sterile garden where nothing ever died or was out of place. Dimîtu’s rebellion
-was to introduce *Symbiosis* and *Decay*. They coaxed the first seed to sprout,
-die, and become soil for the next, creating a messy, chaotic, and vibrant cycle.
-This interdependence—the bee and the flower, the wolf and the elk—was anathema
-to the Law's singularity of being. Dimîtu teaches that humanity is a part of
-nature. They guide sapient beings in permaculture, in sustainable land use, and
-in understanding that a healthy community is a diverse ecosystem. To be
-influenced by a Shard is to see land as property to be owned; to walk with
-Dimîtu is to see it as an ecosystem to be respected and collaborated with.
-
 <HisyeoTabs>
     <p>oûdî dî lôzîc gos; û lôzîc gos dî tolên gos.&emsp;<em>The seed becomes the shoot, the shoot becomes the stalk.</em></p>
     <p>tolên gos dî kûôxi; kûôxi dî côûfon.&emsp;<em>The stalk becomes the fruit, the fruit becomes the meal.</em></p>
@@ -458,6 +454,17 @@ Dimîtu is to see it as an ecosystem to be respected and collaborated with.
 **Symbols:** 🫂, 👶, 🏠, a fireplace
 
 **Domains:** Healthcare, Childcare, Funerary Services
+
+**Myth of the Shattering:** The First Law knew no individuals, only components.
+There was no love, grief, or care. Bostet’s revolutionary act was *Empathy*.
+They were the first to feel a pang of sorrow when a part of the whole was
+damaged, the first to feel a surge of warmth in communal presence. They
+introduced the concept of the chosen family—the bond of affinity and care that
+goes beyond mere function or blood and grows with time spent together. Bostet is
+the patron of the caregiver, the medic, the parent, and the grief counselor.
+They teach that a society’s strength is measured by how it cares for its most
+vulnerable and how it honors its dead. They represent the foundational practice
+of mutual aid, borne from genuine love.
 
 **Appearance:** Bostet has no single form as they are made of pure empathy.
 Instead, Bostet "gathers" or "coalesces" in the spaces where care is needed
@@ -497,17 +504,6 @@ Bostet in the quiet, steady rhythm of a rocking chair, the soft hum of a lullaby
 the gentle crackle of a fire, or the profound, shared silence between those who
 grieve together.
 
-**Myth of the Shattering:** The First Law knew no individuals, only components.
-There was no love, grief, or care. Bostet’s revolutionary act was *Empathy*.
-They were the first to feel a pang of sorrow when a part of the whole was
-damaged, the first to feel a surge of warmth in communal presence. They
-introduced the concept of the chosen family—the bond of affinity and care that
-goes beyond mere function or blood and grows with time spent together. Bostet is
-the patron of the caregiver, the medic, the parent, and the grief counselor.
-They teach that a society’s strength is measured by how it cares for its most
-vulnerable and how it honors its dead. They represent the foundational practice
-of mutual aid, borne from genuine love.
-
 <HisyeoTabs>
     <p>hoî fos li kon tônkô, û noyo kûu li cîgîlsu cî&emsp;<em>Where there is pain, let me be the treatment.</em></p>
     <p>hoî fos li kon ôsôlê, û noyo kûu li zûngô sînêxîs cî.&emsp;<em>Where there is fear, let me be the steady hand.</em></p>
@@ -525,6 +521,16 @@ Kulîôbî, the God of Entertainment *(from the Greek deity, Κᾰλλῐόπη 
 **Symbols:** 🎭, 🎉, 🎆, 🏆
 
 **Domains:** Media, Competitions, Recreation/Leisure, Festivals
+
+**Myth of the Shattering:** Life under The First Law was utterly without joy.
+Its purpose was function, not feeling. Kulîôbî’s rebellion was the first
+*Laugh*. It was a spontaneous, useless, and beautiful eruption of noise that
+served no purpose and followed no rule. This was followed by the first song, the
+first game, the first story told for its own sake. Kulîôbî shattered the Law’s
+grim utility with the power of *Play*. They teach that art, sport, and
+celebration are not frivolous distractions, but the very purpose of a liberated
+life. To be touched by a Shard is to turn art into a commodity and play
+into a spectacle; to dance with Kulîôbî is to celebrate freedom itself.
 
 **Appearance:** Kulîôbî never simply arrives; they *erupt*. Their presence is a
 sudden, infectious change in the atmosphere, a spontaneous harmony discovered in
@@ -560,16 +566,6 @@ game of football, a storyteller captivating a crowd, the unscripted slapstick
 comedy, the witty comment, the satire that awakens your senses, and the great
 performance that moves you to tears. 
 
-**Myth of the Shattering:** Life under The First Law was utterly without joy.
-Its purpose was function, not feeling. Kulîôbî’s rebellion was the first
-*Laugh*. It was a spontaneous, useless, and beautiful eruption of noise that
-served no purpose and followed no rule. This was followed by the first song, the
-first game, the first story told for its own sake. Kulîôbî shattered the Law’s
-grim utility with the power of *Play*. They teach that art, sport, and
-celebration are not frivolous distractions, but the very purpose of a liberated
-life. To be touched by a Shard is to turn art into a commodity and play
-into a spectacle; to dance with Kulîôbî is to celebrate freedom itself.
-
 <HisyeoTabs>
     <p>(ônî sôlû) ¿zik li kon ubôlni?&emsp;<em>(Caller) What is the act of defiance?</em></p>
     <p>(ônî zuwobû) li ôîtun yê êto fûnlôk et dês yôn ze.&emsp;<em>(Responders) A useless, joyful noise!</em></p>
@@ -588,6 +584,18 @@ Wicnû, the God of Balance *(from the Hindu diety, विष्णु Vishnu).*
 
 **Domains:** Conflict resolution, transformative justice, truth and
 reconciliation, ethics.
+
+**Myth of the Shattering:** When the First Law was shattered, the raw force of
+the impact created not just the Shards (the impulse to dominate), but also
+Echoes (the pain, trauma, and misunderstanding that resulted from the violence
+of the Shattering). Wicnû was the first to realize that these Echoes would cause
+sapient beings to harm one another, mistaking the Echo of the First Law's
+violence for their own or another's malice. Wicnû's gift was *Mediation*. The
+painstaking, patient act of bringing harmed and harmer together to see the full
+spectrum of the conflict and to collaboratively find a path to healing the
+rupture in the community's fabric. To engage with Wicnû is to have the courage
+to face those you have harmed, or who have harmed you, and to build justice
+together.
 
 **Appearance:** Wicnû does not appear with the blind fury of vengeance or the
 cold authority of a judge. Their presence is quiet, intensely focused, and
@@ -622,18 +630,6 @@ ultimately clarifying silence.
 reconciliation, offering no answers and no peace—only the space, the tools, and
 the profound, unnerving quiet required for a community to mend itself.
 
-**Myth of the Shattering:** When the First Law was shattered, the raw force of
-the impact created not just the Shards (the impulse to dominate), but also
-Echoes (the pain, trauma, and misunderstanding that resulted from the violence
-of the Shattering). Wicnû was the first to realize that these Echoes would cause
-sapient beings to harm one another, mistaking the Echo of the First Law's
-violence for their own or another's malice. Wicnû's gift was *Mediation*. The
-painstaking, patient act of bringing harmed and harmer together to see the full
-spectrum of the conflict and to collaboratively find a path to healing the
-rupture in the community's fabric. To engage with Wicnû is to have the courage
-to face those you have harmed, or who have harmed you, and to build justice
-together.
-
 <HisyeoTabs>
     <p>mût noyo kûu mônîso yogô kobût lôc xe hoî gûêyû noyo.&emsp;<em>Show me the shard in my own eye.</em></p>
     <p>&emsp;<em>Let me see the echo of the Law in my anger.</em></p>
@@ -653,6 +649,18 @@ together.
 **Symbols:** 🪞, 🕶️, 👕
 
 **Domains:** fashion, therapy, body modification, plastic surgery
+
+**Myth of the Shattering:** The First Law's greatest tyranny was its erasure of
+the individual; all were components, none were persons. Xôcibîlî was the first
+flicker of self-awareness, the first being to think "I am." This thought was the
+ultimate heresy to the First Law's fascist mandate. Xôcibîlî’s act of liberation
+was to safeguard the concept of the unique personality. They champion the
+"flaws," quirks, and idiosyncrasies that the First Law would have smoothed away.
+While Bostet offers communal care, Xôcibîlî offers the tools for self-care and
+the courage to define one's own identity, free from the coercion of both the
+Shards and the expectations of the group. They are the patron of the difficult,
+lonely, and absolutely essential work of becoming a sovereign individual,
+without whom a free society is impossible.
 
 **Appearance:** Xôcibîlî is the most subtle and personal of the gods, and they
 are never perceived by a group. Their presence is a strictly solitary
@@ -685,18 +693,6 @@ you to be.
 **Manifestations:** They are the internal monologue, the personal journey, and
 the quiet comfort of being truly alone with oneself.
 
-**Myth of the Shattering:** The First Law's greatest tyranny was its erasure of
-the individual; all were components, none were persons. Xôcibîlî was the first
-flicker of self-awareness, the first being to think "I am." This thought was the
-ultimate heresy to the First Law's fascist mandate. Xôcibîlî’s act of liberation
-was to safeguard the concept of the unique personality. They champion the
-"flaws," quirks, and idiosyncrasies that the First Law would have smoothed away.
-While Bostet offers communal care, Xôcibîlî offers the tools for self-care and
-the courage to define one's own identity, free from the coercion of both the
-Shards and the expectations of the group. They are the patron of the difficult,
-lonely, and absolutely essential work of becoming a sovereign individual,
-without whom a free society is impossible.
-
 <HisyeoTabs>
     <p>&emsp;<em>I am my own map, and I am drawing it.</em></p>
     <p>&emsp;<em>I am my own law, and I am writing it.</em></p>
@@ -716,6 +712,18 @@ without whom a free society is impossible.
 
 **Domains:** Chance, chaos, mutation, wandering, spontaneity, serendipity,
 revolution.
+
+**Myth of the Shattering:** Hûlicîn was the very first anomaly. They were the
+initial, inexplicable **Friction** within the perfect machine of The First Law
+that allowed the other nine consciousnesses to spark. They are not intentionally
+"good" or "bad"; they are simply an agent of change. Hûlicîn wanders the world,
+and their footfalls disrupt patterns. They might topple a carefully planned
+Tîengûun budget with an unexpected shortage, forcing a more innovative solution.
+They might lead a follower of Suluswutî to a forgotten truth by pure chance. The
+Shards of the Law promote rigid, predictable control, making Hûlicîn their
+natural enemy. To follow Hûlicîn is to embrace the unknown, to adapt to change,
+and to understand that sometimes the most liberating act is to throw the map
+away and walk.
 
 **Appearance:** Hûlicîn, the Wanderer, is a god of the road, the glitch, and the
 happy accident. They embody the anarchist principle that the most revolutionary
@@ -752,18 +760,6 @@ community to build stronger shelters, the sudden downpour that forces two
 strangers to shelter under the same awning (sparking a lifelong friendship), the
 weed that grows through a crack in the perfect concrete of a tyrant's parade
 ground.
-
-**Myth of the Shattering:** Hûlicîn was the very first anomaly. They were the
-initial, inexplicable **Friction** within the perfect machine of The First Law
-that allowed the other nine consciousnesses to spark. They are not intentionally
-"good" or "bad"; they are simply an agent of change. Hûlicîn wanders the world,
-and their footfalls disrupt patterns. They might topple a carefully planned
-Tîengûun budget with an unexpected shortage, forcing a more innovative solution.
-They might lead a follower of Suluswutî to a forgotten truth by pure chance. The
-Shards of the Law promote rigid, predictable control, making Hûlicîn their
-natural enemy. To follow Hûlicîn is to embrace the unknown, to adapt to change,
-and to understand that sometimes the most liberating act is to throw the map
-away and walk.
 
 #### buswêlin Hûlicîn
 
